--- a/src/main/resources/everload-front/assets/i18n/en.json
+++ b/src/main/resources/everload-front/assets/i18n/en.json
@@ -16,6 +16,7 @@
     "SEARCH_PLACEHOLDER": "Search videos on YouTube",
     "SEARCH_BUTTON": "🔎 Search",
     "USE_VIDEO": "📌 Use this video",
-    "RESULTS": "Results"
+    "RESULTS": "Results",
+    "NO_RESULTS_FOUND": "No results found"
   }
   
