--- a/src/main/resources/everload-front/assets/i18n/es.json
+++ b/src/main/resources/everload-front/assets/i18n/es.json
@@ -16,6 +16,7 @@
     "SEARCH_BUTTON": "🔎 Buscar",
     "USE_VIDEO": "📌 Usar este vídeo",
     "RESULTS": "Resultados",
-    "USE_THIS_VIDEO": "Usar este vídeo"
+    "USE_THIS_VIDEO": "Usar este vídeo",
+    "NO_RESULTS_FOUND": "No se encontraron resultados"
   }
   
