--- a/src/main/resources/everload-front/assets/i18n/gl.json
+++ b/src/main/resources/everload-front/assets/i18n/gl.json
@@ -17,6 +17,8 @@
     "SEARCH_BUTTON": "🔎 Buscar",
     "USE_VIDEO": "📌 Usar este vídeo",
     "RESULTS": "Resultados",
-    "USE_THIS_VIDEO": "Usar este vídeo"
+    "USE_THIS_VIDEO": "Usar este vídeo",
+    "NO_RESULTS_FOUND": "Non se atoparon resultados"
+
   }
   
