--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "APP_NAME": "EverLoad",
   "SUBTITLE": "Download videos and music easily",
-  "DOWNLOAD_YOUTUBE": "📥 Download from YouTube",
+  "DOWNLOAD_YOUTUBE": "Download from YouTube",
   "CREATED_BY": "Created by",
   "GITHUB": "GitHub",
   "DOWNLOAD_Twitter": "Download from Twitter",
@@ -20,13 +20,28 @@
     "RESULTS": "Results",
     "NO_RESULTS_FOUND": "No results found",
 
-    "DOWNLOAD_TWITTER": "Download Video ",
+    "DOWNLOAD_TWITTER": "Download form Twitter",
     "PASTE_TWEET_URL": "Paste the tweet URL here",
     "INVALID_TWITTER_URL": "Invalid URL. Make sure you pasted a valid tweet.",
     "SUBTITLE_TWITTER": "Download public videos from Twitter/X.",
     "HOME": "Home",
     "LOADING": "Descargando espera ...",
-    "DOWNLOAD_FAILED": "An error occurred while downloading"
+    "DOWNLOAD_FAILED": "An error occurred while downloading",
+
+
+
+  "DOWNLOAD_FACEBOOK": "Download from Facebook",
+  "PASTE_FACEBOOK_URL": "Paste the Facebook video URL here",
+  "INVALID_FACEBOOK_URL": "Invalid URL. Make sure it's a valid Facebook video link.",
+  "SUBTITLE_FACEBOOK": "Easily download public videos from Facebook.",
+
+  "DOWNLOAD_INSTAGRAM": "Download from Instagram",
+"PASTE_INSTAGRAM_URL": "Paste the Instagram video URL here",
+"INVALID_INSTAGRAM_URL": "Invalid URL. Make sure it's a valid Instagram video link.",
+"SUBTITLE_INSTAGRAM": "Easily download public videos from Instagram.",
+"INSTAGRAM_LIMITATION": "Only public Reels and posts can be downloaded. Stories and private account content are not supported."
+
+
 
 
     
