Video preview added

--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -19,6 +19,8 @@
     "USE_VIDEO": "📌 Use this video",
     "RESULTS": "Results",
     "NO_RESULTS_FOUND": "No results found",
+    "VIDEO_PREVIEW": "Video Preview",
+
 
     "DOWNLOAD_TWITTER": "Download form Twitter",
     "PASTE_TWEET_URL": "Paste the tweet URL here",
