--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -20,6 +20,8 @@
     "RESULTS": "Resultados",
     "USE_THIS_VIDEO": "Usar este vídeo",
     "NO_RESULTS_FOUND": "No se encontraron resultados",
+    "VIDEO_PREVIEW": "Previsualización del vídeo",
+
 
 
     
