--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -20,6 +20,7 @@
     "RESULTS": "Resultados",
     "USE_THIS_VIDEO": "Usar este vídeo",
     "NO_RESULTS_FOUND": "Non se atoparon resultados",
+    "VIDEO_PREVIEW": "Previsualización do vídeo",
 
 
     "DOWNLOAD_TWITTER": "Descargar dende Twitter",
