--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -21,6 +21,13 @@
     "USE_THIS_VIDEO": "Usar este vídeo",
     "NO_RESULTS_FOUND": "Non se atoparon resultados",
     "VIDEO_PREVIEW": "Previsualización do vídeo",
+    "SELECT_VIDEOS_TO_DOWNLOAD": "Selecciona os vídeos para descargar",
+    "PLAYLIST_VIDEOS" : "Vídeos da lista de reprodución",
+    "SELECT_ALL": "Seleccionar todos",
+    "DESELECT_ALL": "Anular selección",
+    "DOWNLOAD_SELECTED_AS_MP3": "Descargar seleccionados como MP3",
+    
+
 
 
     "DOWNLOAD_TWITTER": "Descargar dende Twitter",
