--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -1,51 +1,58 @@
 {
-  "APP_NAME": "EverLoad",
-  "SUBTITLE": "Download videos and music easily",
-  "DOWNLOAD_YOUTUBE": "Download from YouTube",
-  "CREATED_BY": "Created by",
-  "GITHUB": "GitHub",
-  "DOWNLOAD_Twitter": "Download from Twitter",
-
-
-    "HOME": "🏠 Home",
-    "DOWNLOAD_FROM_YOUTUBE": "Download from YouTube",
-    "PASTE_YOUTUBE_LINK": "Paste YouTube link here",
-    "SELECT_RESOLUTION": "Select resolution",
-    "DOWNLOAD_VIDEO": "📹 Download Video",
-    "DOWNLOAD_MUSIC": "🎵 Download Music",
-    "LOADING": "⏳ Downloading, please wait...",
-    "SEARCH_PLACEHOLDER": "Search videos on YouTube",
-    "SEARCH_BUTTON": "🔎 Search",
-    "USE_VIDEO": "📌 Use this video",
-    "RESULTS": "Results",
-    "NO_RESULTS_FOUND": "No results found",
-    "VIDEO_PREVIEW": "Video Preview",
-    "SELECT_VIDEOS_TO_DOWNLOAD": "Select videos to download",
-    "PLAYLIST_VIDEOS": "Playlist Videos",
-    "SELECT_ALL": "Select all",
-    "DESELECT_ALL": "Deselect all",
-    "DOWNLOAD_SELECTED_AS_MP3": "Download selected as MP3",
+"_comment1": "Textos generales de la app",
+"APP_NAME": "EverLoad",
+"SUBTITLE": "Download videos and music easily",
+"DOWNLOAD_YOUTUBE": "Download from YouTube",
+"CREATED_BY": "Created by",
+"GITHUB": "GitHub",
+"DOWNLOAD_Twitter": "Download from Twitter",
 
 
 
+"_comment2": "Sección de YouTube",
+"HOME": "🏠 Home",
+"DOWNLOAD_FROM_YOUTUBE": "Download from YouTube",
+"PASTE_YOUTUBE_LINK": "Paste YouTube link here",
+"SELECT_RESOLUTION": "Select resolution",
+"DOWNLOAD_VIDEO": "📹 Download Video",
+"DOWNLOAD_MUSIC": "🎵 Download Music",
+"LOADING": "⏳ Downloading, please wait...",
+"SEARCH_PLACEHOLDER": "Search videos on YouTube",
+"SEARCH_BUTTON": "🔎 Search",
+"USE_VIDEO": "📌 Use this video",
+"RESULTS": "Results",
+"NO_RESULTS_FOUND": "No results found",
+"VIDEO_PREVIEW": "Video Preview",
+"SELECT_VIDEOS_TO_DOWNLOAD": "Select videos to download",
+"PLAYLIST_VIDEOS": "Playlist Videos",
+"SELECT_ALL": "Select all",
+"DESELECT_ALL": "Deselect all",
+"DOWNLOAD_SELECTED_AS_MP3": "Download selected as MP3",
 
 
-    "DOWNLOAD_TWITTER": "Download form Twitter",
-    "PASTE_TWEET_URL": "Paste the tweet URL here",
-    "INVALID_TWITTER_URL": "Invalid URL. Make sure you pasted a valid tweet.",
-    "SUBTITLE_TWITTER": "Download public videos from Twitter/X.",
-    "HOME": "Home",
-    "LOADING": "Descargando espera ...",
-    "DOWNLOAD_FAILED": "An error occurred while downloading",
+
+
+"_comment3": "Sección de Twitter/X",
+"DOWNLOAD_TWITTER": "Download form Twitter",
+"PASTE_TWEET_URL": "Paste the tweet URL here",
+"INVALID_TWITTER_URL": "Invalid URL. Make sure you pasted a valid tweet.",
+"SUBTITLE_TWITTER": "Download public videos from Twitter/X.",
+"HOME": "Home",
+"LOADING": "Descargando espera ...",
+"DOWNLOAD_FAILED": "An error occurred while downloading",
 
 
 
-  "DOWNLOAD_FACEBOOK": "Download from Facebook",
-  "PASTE_FACEBOOK_URL": "Paste the Facebook video URL here",
-  "INVALID_FACEBOOK_URL": "Invalid URL. Make sure it's a valid Facebook video link.",
-  "SUBTITLE_FACEBOOK": "Easily download public videos from Facebook.",
+"_comment4": "Sección de Facebook",
+"DOWNLOAD_FACEBOOK": "Download from Facebook",
+"PASTE_FACEBOOK_URL": "Paste the Facebook video URL here",
+"INVALID_FACEBOOK_URL": "Invalid URL. Make sure it's a valid Facebook video link.",
+"SUBTITLE_FACEBOOK": "Easily download public videos from Facebook.",
 
-  "DOWNLOAD_INSTAGRAM": "Download from Instagram",
+
+
+"_comment5": "Sección de Instagram",
+"DOWNLOAD_INSTAGRAM": "Download from Instagram",
 "PASTE_INSTAGRAM_URL": "Paste the Instagram video URL here",
 "INVALID_INSTAGRAM_URL": "Invalid URL. Make sure it's a valid Instagram video link.",
 "SUBTITLE_INSTAGRAM": "Easily download public videos from Instagram.",
