word in Galician changed

--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -17,7 +17,7 @@
 "SELECT_RESOLUTION": "Selecciona a resolución",
 "DOWNLOAD_VIDEO": "📹 Descargar Vídeo",
 "DOWNLOAD_MUSIC": "🎵 Descargar Música",
-"LOADING": "⏳ Descargando, por favor espera...",
+"LOADING": "⏳ Descargando, por favor agarde...",
 "SEARCH_PLACEHOLDER": "Buscar vídeos en YouTube",
 "SEARCH_BUTTON": "🔎 Buscar",
 "USE_VIDEO": "📌 Usar este vídeo",
