--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -30,7 +30,8 @@
 "SELECT_ALL": "Seleccionar todos",
 "DESELECT_ALL": "Anular selección",
 "DOWNLOAD_SELECTED_AS_MP3": "Descargar seleccionados como MP3",
-    
+"VIDEO_NOT_LOADING_WARNING": "Se o vídeo non carga, pode que teña restricións de idade ou de reprodución.",
+
 
 
 
