--- a/src/main/resources/everload-front/assets/i18n/es.json
+++ b/src/main/resources/everload-front/assets/i18n/es.json
@@ -27,6 +27,7 @@
   "SELECT_ALL": "Seleccionar todos",
   "DESELECT_ALL": "Deseleccionar todos",
   "DOWNLOAD_SELECTED_AS_MP3": "Descargar seleccionados como MP3",
+  "VIDEO_NOT_LOADING_WARNING": "Si el vídeo no carga, puede que tenga restricciones de edad o de reproducción.",
 
     
 
