--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -28,6 +28,10 @@
   "DESELECT_ALL": "Deseleccionar todos",
   "DOWNLOAD_SELECTED_AS_MP3": "Descargar seleccionados como MP3",
   "VIDEO_NOT_LOADING_WARNING": "Si el vídeo no carga, puede que tenga restricciones de edad o de reproducción.",
+  "INVALID_YOUTUBE_LINK": "El enlace de YouTube no es válido.",
+  "ERROR_DOWNLOADING_VIDEO": "Ocurrió un error al descargar el vídeo.",
+  "ERROR_UNKNOWN": "Algo salió mal. Intenta de nuevo más tarde.",
+
 
     
 
