--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -31,6 +31,10 @@
 "DESELECT_ALL": "Anular selección",
 "DOWNLOAD_SELECTED_AS_MP3": "Descargar seleccionados como MP3",
 "VIDEO_NOT_LOADING_WARNING": "Se o vídeo non carga, pode que teña restricións de idade ou de reprodución.",
+"INVALID_YOUTUBE_LINK": "A ligazón de YouTube non é válida.",
+"ERROR_DOWNLOADING_VIDEO": "Produciuse un erro ao descargar o vídeo.",
+"ERROR_UNKNOWN": "Algo saíu mal. Inténtao de novo máis tarde.",
+
 
 
 
