--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -34,6 +34,7 @@
 "INVALID_YOUTUBE_LINK": "A ligazón de YouTube non é válida.",
 "ERROR_DOWNLOADING_VIDEO": "Produciuse un erro ao descargar o vídeo.",
 "ERROR_UNKNOWN": "Algo saíu mal. Inténtao de novo máis tarde.",
+"ERROR_DOWNLOADING_MUSIC": "Produciuse un erro ao descargar a música.",
 
 
 
