--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -32,7 +32,7 @@
   "ERROR_DOWNLOADING_VIDEO": "Ocurrió un error al descargar el vídeo.",
   "ERROR_UNKNOWN": "Algo salió mal. Intenta de nuevo más tarde.",
   "ERROR_DOWNLOADING_MUSIC": "Ocurrió un error al descargar la música.",
-
+  "ERROR_LOADING_PLAYLIST": "Ocurrió un error al cargar la lista de reproducción.",
 
     
 
