--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -35,7 +35,7 @@
 "ERROR_DOWNLOADING_VIDEO": "Produciuse un erro ao descargar o vídeo.",
 "ERROR_UNKNOWN": "Algo saíu mal. Inténtao de novo máis tarde.",
 "ERROR_DOWNLOADING_MUSIC": "Produciuse un erro ao descargar a música.",
-
+"ERROR_LOADING_PLAYLIST": "Produciuse un erro ao cargar a lista de reprodución",
 
 
 
