change name from YouTube

--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
 "_comment1": "Textos generales de la app",
-"APP_NAME": "EverLoad",
+"Youtube": "YouTube",
 "SUBTITLE": "Download videos and music easily",
 "DOWNLOAD_YOUTUBE": "Download from YouTube",
 "CREATED_BY": "Created by",
