--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "_comment1": "Textos generales de la app",
-  "APP_NAME": "EverLoad",
+  "Youtube": "YouTube",
   "SUBTITLE": "Descarga videos y música fácilmente",
   "DOWNLOAD_YOUTUBE": "Descargar vídeo de YouTube",
   "CREATED_BY": "Creado por",
