--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -1,6 +1,6 @@
 {
 "_comment1": "Textos generales de la app",
-"APP_NAME": "EverLoad",
+"Youtube": "YouTube",
 "SUBTITLE": "Descarga vídeos e audios doadamente",
 "DOWNLOAD_YOUTUBE": "Descargar dende YouTube",
 "CREATED_BY": "Creado por",
