polish home screen with brand-colored gradients and visual enhancements

--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
 "CREATED_BY": "Created by",
 "GITHUB": "GitHub",
 "DOWNLOAD_Twitter": "Download from Twitter",
+"DOWNLOAD_TIKTOK": "Download from TikTok",
 
 
 
