--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -6,6 +6,7 @@
   "CREATED_BY": "Creado por",
   "GITHUB": "GitHub",
   "DOWNLOAD_Twitter": "Descargar de YouTube",
+  "DOWNLOAD_TIKTOK": "Descargar de TikTok",
 
   "_comment2": "Sección de YouTube",
   "HOME": "🏠 Inicio",
