--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -6,6 +6,7 @@
 "CREATED_BY": "Creado por",
 "GITHUB": "GitHub",
 "DOWNLOAD_Twitter": "Descargar dende Twitter",
+"DOWNLOAD_TIKTOK": "Descargar dende TikTok",
 
 
 
