--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -77,7 +77,16 @@
   "DOWNLOAD_ALL": "Download entire playlist",
   "FOUND_TRACKS": "Found songs:",
   "DOWNLOAD": "Download",
-  "NO_RESULTS": "No songs found or an error occurred."
+  "NO_RESULTS": "No songs found or an error occurred.",
+
+
+  "_comment7": "Sección de TikTok",
+  "PASTE_TIKTOK_URL": "Paste the TikTok link",
+  "DOWNLOAD_TIKTOK": "Download from TikTok",
+  "LOADING": "Downloading",
+  "HOME": "Home",
+  "EMPTY_URL_ERROR": "Please enter a TikTok link.",
+  "DOWNLOAD_FAILED": "Failed to download the video. Please try again later."
 
 
 
