add scroll to Spotify card to prevent layout overflow on long playlists

--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -85,7 +85,7 @@
 
   "_comment7": "Sección de TikTok",
   "PASTE_TIKTOK_URL": "Pega a ligazón de TikTok",
-  "DOWNLOAD_TIKTOK": "Descargar desde TikTok",
+  "DOWNLOAD_TIKTOK": "Descargar dende TikTok",
   "LOADING": "Descargando",
   "HOME": "Inicio",
   "EMPTY_URL_ERROR": "Por favor, introduce unha ligazón de TikTok.",
