--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -70,7 +70,7 @@
 "DOWNLOAD_SPOTIFY": "Download from Spotify",
 "DOWNLOAD_Spotify_FAILED": "An error occurred while downloading from Spotify",
   "TITLE": "Spotify Playlist Downloader",
-  "SUBTITLE": "Paste your playlist URL and download the songs one by one",
+  "Spotify_Subtitle": "Paste your playlist URL and download the songs one by one",
   "PLACEHOLDER": "Paste the playlist URL here",
   "SEARCH_BUTTON": "Search songs",
   "LOADING": "Searching songs...",
